# geekom-benchmarks

./: .gitignore  LOCAL_MODEL_QUICK_REFERENCE.md  README.md  Run_All_Benchmarks.bat  pyproject.toml  requirements.txt
config/: hardware.yaml  models.yaml  tasks.yaml
data/: 780m-leaderboard.json
docs/: benchmark_ecosystem.md  vision_benchmarks.md
results/summary/: bounded_live_validation_status.md  canonical_remaining_status_20260627.md  coding_tournament_overnight_status.md  full_suite_overnight_status_20260626.md  overnight_status.md  recommended_model_matrix_daily_20260627.md
scripts/: _bootstrap.py  benchmark.py  check_environment.py  collect_windows_metrics.py  compare_runs.py  generate_report.py  prepare_vision_assets.py  record_external_status.py  run_agent_workflow.py  run_all.py  run_benchmarks.py  run_coding_tasks.py  run_external_benchmarks.py  run_longcontext.py  run_structured.py  run_tool_reliability.py  run_vision_tasks.py  tool_call_reliability_modes.py
src/geekom_benchmarks/: __init__.py  config.py
src/geekom_benchmarks/adapters/: __init__.py  bfcl_lite.py  evalscope_adapter.py  llama_bench_adapter.py  lm_eval_adapter.py  mlperf_client_importer.py  tau_lite.py
src/geekom_benchmarks/clients/: __init__.py  base.py  lemonade.py
src/geekom_benchmarks/metrics/: __init__.py  windows.py
src/geekom_benchmarks/reporting/: __init__.py  report.py
src/geekom_benchmarks/runners/: __init__.py  agent.py  base.py  coding.py  external.py  longcontext.py  speed.py  (+3 more)
test_assets/vision/: README.md  manifest.json
tests/: test_agent_workflow_v2.py
(+9 files in other folders)
