[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "geekom-benchmarks"
version = "1.0.0"
description = "Canonical local-AI benchmark & agent-readiness suite (reference HW: GEEKOM A9 Max / Ryzen AI 9 HX 370)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["requests>=2.28", "PyYAML>=6.0", "psutil>=5.9"]

[project.optional-dependencies]
# Vision asset generation (scripts/prepare_vision_assets.py)
vision = ["Pillow>=10.0", "matplotlib>=3.7", "numpy>=1.24"]

[tool.setuptools.packages.find]
where = ["src"]

# Run scripts directly (they bootstrap sys.path); installation is optional:
#   python scripts/check_environment.py
